# ffmpegtest

app/: build.gradle
app/src/androidTest/java/com/bobo/ffmpegtest/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/ffmpeg/include/libavutil/: ffversion.h
app/src/main/java/com/bobo/ffmpegtest/: MainActivity.kt
app/src/test/java/com/bobo/ffmpegtest/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
